--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".SecondActivity"
+            android:name=".components.SecondActivity"
             android:exported="false" />
         <activity
-            android:name=".FirstActivity"
+            android:name=".components.FirstActivity"
             android:exported="false" />
-        <activity android:name=".ThirdActivity" />
-        <activity android:name=".FourthActivity" />
-        <activity android:name=".FifthActivity" />
-        <activity android:name=".SisthActivity" />
+        <activity android:name=".components.ThirdActivity" />
+        <activity android:name=".components.FourthActivity" />
+        <activity android:name=".components.FifthActivity" />
+        <activity android:name=".components.SisthActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
