--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".FlipPage"
+            android:theme="@style/AppTheme.Transparent"
+            android:exported="false" />
+        <activity
             android:name=".components.SecondActivity"
             android:exported="false" />
         <activity
