--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".FlipPage"
+            android:name=".recharge.FlipPage"
             android:theme="@style/AppTheme.Transparent"
             android:exported="false" />
         <activity
