--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".recharge.FlipPage"
-            android:theme="@style/AppTheme.Transparent"
+            android:theme="@style/TranslucentStyle"
             android:exported="false" />
         <activity
             android:name=".components.SecondActivity"
