--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Return"
+            android:theme="@style/TranslucentStyle"
+            android:exported="false" />
+        <activity
             android:name=".recharge.FlipPage"
             android:theme="@style/TranslucentStyle"
             android:exported="false" />
