--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,35 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".activity.Return"
-            android:theme="@style/TranslucentStyle"
+            android:name=".activity.components.bilibili.activity.TenActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.components.bilibili.activity.NineActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.components.bilibili.activity.ViewModelTest"
+            android:exported="false" />
+        <activity
+            android:name=".activity.components.bilibili.activity.ServeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Return"
+            android:exported="false"
+            android:theme="@style/TranslucentStyle" />
         <activity
             android:name=".recharge.activity.FlipPage"
-            android:theme="@style/TranslucentStyle"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/TranslucentStyle" />
         <activity
-            android:name=".components.SecondActivity"
+            android:name=".activity.components.SecondActivity"
             android:exported="false" />
         <activity
             android:name=".components.RechargePage"
             android:exported="false" />
-        <activity android:name=".components.ThirdActivity" />
+        <activity android:name=".activity.components.ThirdActivity" />
         <activity android:name=".components.FourthActivity" />
         <activity android:name=".components.FifthActivity" />
-        <activity android:name=".components.SisthActivity" />
+        <activity android:name=".activity.components.SisthActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
