--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,11 +15,16 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        dataBinding {
+            enabled true
+        }
+
     }
 
     buildFeatures{
         viewBinding = true
     }
+
 
     buildTypes {
         release {
