--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".feed.activity.FeedStreamHomePageActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.components.bilibili.activity.SharedPreferencesActivity"
             android:exported="false" />
         <activity
@@ -42,11 +45,11 @@
             android:name=".activity.components.VariousTextviewActivity"
             android:exported="false" />
         <activity
-            android:name=".components.RechargePageActivity"
+            android:name=".activity.components.RechargePageActivity"
             android:exported="false" />
         <activity android:name=".activity.components.ThirdActivity" />
-        <activity android:name=".components.FourthActivity" />
-        <activity android:name=".components.FifthActivity" />
+        <activity android:name=".activity.components.FourthActivity" />
+        <activity android:name=".activity.components.FifthActivity" />
         <activity android:name=".activity.components.CustomActivity" />
         <activity
             android:name=".MainActivity"
