--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'io.github.youth5201314:banner:2.2.2'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    //room
+    implementation 'androidx.room:room-runtime:2.4.2'
+    annotationProcessor'androidx.room:room-compiler:2.4.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
