--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,18 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'io.github.youth5201314:banner:2.2.2'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation 'androidx.appcompat:appcompat:1.6.1'                 //必须 1.0.0 以上
+
+    implementation  'io.github.scwang90:refresh-layout-kernel:2.0.6'      //核心必须依赖
+    implementation  'io.github.scwang90:refresh-header-classics:2.0.6'    //经典刷新头
+    implementation  'io.github.scwang90:refresh-header-radar:2.0.6'       //雷达刷新头
+    implementation  'io.github.scwang90:refresh-header-falsify:2.0.6'     //虚拟刷新头
+    implementation  'io.github.scwang90:refresh-header-material:2.0.6'    //谷歌刷新头
+    implementation  'io.github.scwang90:refresh-header-two-level:2.0.6'   //二级刷新头
+    implementation  'io.github.scwang90:refresh-footer-ball:2.0.6'        //球脉冲加载
+    implementation  'io.github.scwang90:refresh-footer-classics:2.0.6'    //经典加载
+
+
     //room
     implementation 'androidx.room:room-runtime:2.4.2'
     annotationProcessor'androidx.room:room-compiler:2.4.2'
