--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -55,8 +56,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.github.tiann:FreeReflection:3.1.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'io.github.youth5201314:banner:2.2.2'
+    implementation 'com.google.code.gson:gson:2.8.9'                    //json文件转换
+    implementation 'io.github.youth5201314:banner:2.2.2'                //轮播图
     implementation 'androidx.appcompat:appcompat:1.6.1'                 //必须 1.0.0 以上
 
     implementation  'io.github.scwang90:refresh-layout-kernel:2.0.6'      //核心必须依赖
@@ -71,6 +72,8 @@ dependencies {
 
     //room
     implementation 'androidx.room:room-runtime:2.4.2'
+    implementation 'androidx.room:room-ktx:2.4.2'
+    kapt ('androidx.room:room-compiler:2.4.2')
     annotationProcessor'androidx.room:room-compiler:2.4.2'
 
     testImplementation 'junit:junit:4.13.2'
