--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -20,13 +20,17 @@
             android:name=".activity.components.bilibili.activity.Room2Activity"
             android:exported="false" />
         <activity
+            android:name=".recharge.activity.CardActivity"
+            android:exported="false"
+            android:theme="@style/TranslucentStyle"/>
+        <activity
             android:name=".activity.components.bilibili.activity.RoomActivity"
             android:exported="false" />
         <activity
             android:name=".activity.components.BannerActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.components.PhnoeActivity"
+            android:name=".activity.components.PhoneActivity"
             android:exported="false" />
         <activity
             android:name=".feed.activity.FeedStreamHomePageActivity"
