--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -68,6 +67,8 @@ dependencies {
     implementation  'io.github.scwang90:refresh-header-two-level:2.0.6'   //二级刷新头
     implementation  'io.github.scwang90:refresh-footer-ball:2.0.6'        //球脉冲加载
     implementation  'io.github.scwang90:refresh-footer-classics:2.0.6'    //经典加载
+
+    implementation 'com.github.angcyo.DslTablayout:TabLayout:3.5.5'
 
 
     //room
