--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.14"
+    implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.14" //改成2.9.50
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'com.blankj:utilcodex:1.31.1'
