--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,13 +51,13 @@ dependencies {
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'com.blankj:utilcodex:1.31.1'
+
+    //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    implementation 'com.github.tiann:FreeReflection:3.1.0'
-    implementation 'com.makeramen:roundedimageview:2.3.0'
+
     implementation 'com.google.code.gson:gson:2.8.9'                    //json文件转换
     implementation 'io.github.youth5201314:banner:2.2.2'                //轮播图
-    implementation 'androidx.appcompat:appcompat:1.6.1'                 //必须 1.0.0 以上
 
     implementation  'io.github.scwang90:refresh-layout-kernel:2.0.6'      //核心必须依赖
     implementation  'io.github.scwang90:refresh-header-classics:2.0.6'    //经典刷新头
