--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,11 @@ dependencies {
 
     implementation 'com.github.angcyo.DslTablayout:TabLayout:3.5.5'
 
+    implementation 'com.blankj:utilcodex:1.31.1'    //通用工具类
+
+    implementation 'com.github.donkingliang:ConsecutiveScroller:4.6.4'  //吸顶
+
+
 
     //room
     implementation 'androidx.room:room-runtime:2.4.2'
