--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -17,12 +17,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
+            android:name=".activity.components.OkhttpActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.components.bilibili.activity.Room2Activity"
             android:exported="false" />
         <activity
             android:name=".recharge.activity.CardActivity"
             android:exported="false"
-            android:theme="@style/TranslucentStyle"/>
+            android:theme="@style/TranslucentStyle" />
         <activity
             android:name=".activity.components.bilibili.activity.RoomActivity"
             android:exported="false" />
