--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
+            android:name=".activity.components.BroadcastReceiverActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.components.ServiceActivity"
             android:exported="false" />
         <activity
@@ -89,11 +92,8 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-        <service android:name=".service.MyService" />"
+        </activity> <!-- 组件必须在清单文件里面注册 -->
+        <service android:name=".service.MyService" />
     </application>
-
-
 
 </manifest>
