广告引导页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
+            android:name=".activity.components.AdvertisingActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.components.BroadcastReceiverActivity"
             android:exported="false" />
         <activity
