--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'   //约束布局
     implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.14" //改成2.9.50
-    implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
+    implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'   //沉浸式
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'com.blankj:utilcodex:1.31.1'
 
@@ -68,7 +68,7 @@ dependencies {
     implementation  'io.github.scwang90:refresh-footer-ball:2.0.6'        //球脉冲加载
     implementation  'io.github.scwang90:refresh-footer-classics:2.0.6'    //经典加载
 
-    implementation 'com.github.angcyo.DslTablayout:TabLayout:3.5.5'
+    implementation 'com.github.angcyo.DslTablayout:TabLayout:3.5.5' //tablayout
 
     implementation 'com.blankj:utilcodex:1.31.1'    //通用工具类
 
@@ -76,7 +76,9 @@ dependencies {
 
     implementation 'androidx.cardview:cardview:1.0.0'   //CardView提供圆角
 
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")  //okhttp网络
+
+    implementation"androidx.lifecycle:lifecycle-livedata-ktx:2.2.0" //lifecucle
 
 
     //room
