--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        dataBinding {
-            enabled true
-        }
 
+
+    }
+
+    dataBinding {
+        enabled true
     }
 
     buildFeatures{
@@ -81,6 +83,8 @@ dependencies {
     implementation"androidx.lifecycle:lifecycle-livedata-ktx:2.5.1" //lifecucle
 
     implementation 'com.gongwen:marqueelibrary:1.1.3' //轮播图
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //room
     implementation 'androidx.room:room-runtime:2.4.2'
