--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
+            android:name=".activity.components.UserActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.components.StudentActivity"
             android:exported="false" />
 
