--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
 
     implementation 'com.gongwen:marqueelibrary:1.1.3' //轮播图
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.71828'   //图片加载框架picasso
 
     //room
     implementation 'androidx.room:room-runtime:2.4.2'
