--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'   //约束布局
     implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.14" //改成2.9.50
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'   //沉浸式
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3' //协程
     implementation 'com.blankj:utilcodex:1.31.1'
 
     //glide
@@ -81,6 +81,10 @@ dependencies {
 
     implementation("com.squareup.okhttp3:okhttp:4.9.0")  //okhttp网络
 
+    //retrofit网络请求
+    implementation"com.squareup.retrofit2:retrofit:2.9.0"
+    implementation"com.squareup.retrofit2:converter-gson:2.9.0"
+
     implementation"androidx.lifecycle:lifecycle-livedata-ktx:2.5.1" //lifecucle
 
     implementation 'com.gongwen:marqueelibrary:1.1.3' //轮播图
@@ -91,10 +95,10 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
-    //viewmodel为例，注入hilt
+   /* //viewmodel为例，注入hilt
     implementation("androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03")
     kapt("androidx.hilt:hilt-compiler:1.0.0")
-
+*/
     //room
     implementation 'androidx.room:room-runtime:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2'
