--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:name=".BaseApplication"
         tools:targetApi="33">
         <activity
-            android:name=".activity.BaseApplicationActivity"
+            android:name=".activity.BaseApplication"
             android:exported="false" />
         <activity
             android:name=".activity.components.UserActivity"
