--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,8 +18,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
-        android:name=".BaseApplication"
         tools:targetApi="33">
+        <activity
+            android:name=".activity.components.HotListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.components.FirstRoomActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.BaseApplication"
             android:exported="false" />
