--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,9 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.google.code.gson:gson:2.8.9'                    //json文件转换
     implementation 'io.github.youth5201314:banner:2.2.2'                //轮播图
