aidl客户端向服务端发送消息

--- a/settings.gradle
+++ b/settings.gradle
@@ -40,3 +40,5 @@ dependencyResolutionManagement {
 rootProject.name = "My Application"
 include ':app'
 include ':java'
+include ':sdk'
+include ':otherapp'
