--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 
     buildFeatures{
         viewBinding = true
+        aidl = true
     }
 
 
@@ -57,8 +58,6 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.google.code.gson:gson:2.8.9'                    //json文件转换
