--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.sensor.accelerometer"
@@ -30,12 +30,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
-        tools:targetApi="33" >
+        tools:targetApi="33">
+        <service
+            android:name="com.example.myapplication.MyService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.myapplication.MyService" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".call.CallActivity"
-            android:exported="false"
-            android:label="@string/title_activity_call"
-            android:theme="@style/Theme.MyApplication" />
+            android:exported="false" />
         <activity
             android:name=".activity.components.ThreadsActivity"
             android:exported="false" />
@@ -94,7 +101,7 @@
         <receiver
             android:name=".broadcast.BootCompleteReceiver"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -175,7 +182,7 @@
         <activity android:name=".activity.components.CustomActivity" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
